--- a/index.html
+++ b/index.html
@@ -56,7 +56,26 @@
                             Hi! I am Bijaya, a software developer in San Francisco.
                         </p>
 
-                        <p>You can learn more about me and my skills if you click right here.</p>
+                        <p>
+                            on the nav bar following links are working currently, will update soon.
+                            The travel page has a image sliding for demos, needs updates.
+                        </p>
+
+                            <ul>
+                                <li>Home</li>
+                                <li>Travel</li>
+                                <li>Twitter</li>
+                                <li>F/book</li>
+                                <li>GitHub</li>
+                                <li>CodePen</li>
+                                <li>CodeWars</li>
+                                <li></li>
+                                <li></li>
+                                
+
+
+                            </ul>
+                        </h3>
                     </div> 
                                        
                 </div>
